--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     ],
     "origin": "https://github.com/l0cks-acab/AMPTemplates.git",
     "url": "https://github.com/l0cks-acab/AMPTemplates",
-    "imagefile": "",
+    "imagefile": "https://docs.nzp.gay/res/images/demo_ndu.webp",
     "prefix": "",
     "repotype": "AppTemplates"
 }
